CSS Fixes for Text Alignment and Chat Send and receive styles fixes.

--- a/Web/legalconnect/src/css/_chat.scss
+++ b/Web/legalconnect/src/css/_chat.scss
@@ -191,9 +191,9 @@ img {
 .sent {
   background: #fff;
   margin-top: 10px;
-  border-radius: 15px 15px 0px 15px;
+  border-radius: 10px 10px 10px 10px;
   border: 1px solid #000;
-  padding: 15px;
+  padding: 10px;
   color: #000;
   display: inline-table;
 }
@@ -201,10 +201,10 @@ img {
 .receive {
   background: #fff;
   margin-top: 10px;
-  border-radius: 15px 15px 0px 15px;
+  border-radius: 10px 10px 10px 10px;
   /*width: 96%;*/
   margin-left: 23px;
-  padding: 15px;
+  padding: 10px;
   border: 1px solid #000;
   color: #000;
   display: inline-table;
