--- a/Web/legalconnect/src/css/_legalassist.scss
+++ b/Web/legalconnect/src/css/_legalassist.scss
@@ -1124,6 +1124,7 @@ footer p {
 }
 
 .timeline .panel-outline .panel-body {
+    width:95%;
   padding: 10px 0px;
 }
 
